WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157517
Fix the !ENABLE(INDEXED_DATABASE) build
https://bugs.webkit.org/show_bug.cgi?id=157517
Summary
Fix the !ENABLE(INDEXED_DATABASE) build
Csaba Osztrogonác
Reported
2016-05-10 07:56:56 PDT
It's trivial, patch is coming.
Attachments
Patch
(2.00 KB, patch)
2016-05-10 07:57 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(1000.17 KB, application/zip)
2016-05-10 08:38 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-05-10 07:57:57 PDT
Created
attachment 278492
[details]
Patch
Build Bot
Comment 2
2016-05-10 08:38:09 PDT
Comment on
attachment 278492
[details]
Patch
Attachment 278492
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1298972
New failing tests: transitions/default-timing-function.html
Build Bot
Comment 3
2016-05-10 08:38:11 PDT
Created
attachment 278494
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 4
2016-05-10 13:41:01 PDT
Comment on
attachment 278492
[details]
Patch Clearing flags on attachment: 278492 Committed
r200639
: <
http://trac.webkit.org/changeset/200639
>
WebKit Commit Bot
Comment 5
2016-05-10 13:41:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug