Fix the !ENABLE(INDEXED_DATABASE) build https://bugs.webkit.org/show_bug.cgi?id=157517

Reviewed by Alex Christensen.

* workers/WorkerGlobalScope.cpp:
(WebCore::WorkerGlobalScope::WorkerGlobalScope):
* workers/WorkerThread.cpp:
(WebCore::WorkerThread::WorkerThread):


Canonical link: https://commits.webkit.org/175668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200639 268f45cc-cd09-0410-ab3c-d52691b4dbfc